--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.aria.unity.itweenhelper",
+    "name": "com.aria.unity.itween",
     "version": "1.0.0",
     "unity": "2019.1",
     "displayName": "iTweenHelper",
