--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "category": "UI",
     "keywords": ["UI", "Animation", "Tween"],
     "dependencies": {
+        "jp.keijiro.klak.timeline.midi": "1.0.3"
     },
     "samples": [
         {
